--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -34,18 +34,18 @@
 		border-bg:			rgba(144,144,144,0.075),
 		border2:			rgba(144,144,144,0.75),
 		border2-bg:			rgba(144,144,144,0.2),
-		accent1:			#c3e895,
+		accent1:			#faa322,
 		accent2:			#8addaa,
 		accent3:			#6bd4c8,
 		accent4:			#57aed3,
 		accent5:			#4a87d3,
-		accent6:			#6b88e6,
-		accent1-alt:		desaturate(darken(#c3e895, 15), 20),
+		accent6:			#32b8af,
+		accent1-alt:		desaturate(darken(#faa322, 15), 20),
 		accent2-alt:		desaturate(darken(#8addaa, 15), 20),
 		accent3-alt:		desaturate(darken(#6bd4c8, 15), 20),
 		accent4-alt:		desaturate(darken(#57aed3, 15), 20),
 		accent5-alt:		desaturate(darken(#4a87d3, 15), 20),
-		accent6-alt:		desaturate(darken(#6b88e6, 15), 20),
+		accent6-alt:		desaturate(darken(#32b8af, 15), 20),
 
 		dark: (
 			bg:				#666666,
