--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
+@import url("https://fonts.googleapis.com/css?family=Lato");
 /*
 	Photon by HTML5 UP
 	html5up.net | @ajlkn
@@ -97,7 +98,7 @@ body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 
 body, input, select, textarea {
   color: #666;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 16pt;
   font-weight: 300;
   line-height: 1.65em;
@@ -2331,13 +2332,18 @@ button:disabled,
   color: #ffffff;
 }
 
-/* Header */
+/* Header Gradient */
+.palerbg {
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 5px;
+}
+
 #header {
   padding: 9em 0 9em 0;
   background-color: #4686a0;
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed, fixed, fixed;
-  background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #faa322 5%, #32b8af 32%, #316c68);
+  background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #faa322 8%, #32b8af 32%, #316c68);
   background-position: top left, center center, center center;
   background-size: auto, cover, cover;
   overflow: hidden;
@@ -2503,13 +2509,13 @@ body.is-preload #header:after {
   opacity: 1;
 }
 
-/* Footer */
+/* Footer Gradient */
 #footer {
   padding: 6em 0 6em 0;
   background-color: #4686a0;
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed, fixed, fixed;
-  background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #316c68, #32b8af 68%, #faa322 90%);
+  background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #316c68, #32b8af 50%, #faa322 85%);
   background-position: top left, center center, center center;
   background-size: auto, cover, cover;
   text-align: center;
