--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'libs/html-grid';
 @import url('font-awesome.min.css');
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 /*
 	Photon by HTML5 UP
@@ -1097,13 +1098,18 @@
 		}
 	}
 
-/* Header */
+/* Header Gradient */
+
+  .palerbg {
+    background-color: hsla(0,100,100,0.8); 
+    padding: 5px;
+  }
 
 	#header {
 		@include padding(9em, 0, (0,0,_size(element-margin),0));
 		@include dark(#4686a0);
 		background-attachment:	fixed,							fixed,							fixed;
-		background-image:		url('images/overlay2.png'),		url('images/overlay3.svg'),		linear-gradient(45deg, _palette(accent1) 5%, _palette(accent6) 32%, _palette(accent6-alt));
+		background-image:		url('images/overlay2.png'),		url('images/overlay3.svg'),		linear-gradient(45deg, _palette(accent1) 8%, _palette(accent6) 32%, _palette(accent6-alt));
 		background-position:	top left,						center center,					center center;
 		background-size:		auto,							cover,							cover;
 		overflow: hidden;
@@ -1188,13 +1194,13 @@
 		}
 	}
 
-/* Footer */
+/* Footer Gradient */
 
 	#footer {
 		@include padding(6em, 0, (0,0,_size(element-margin),0));
 		@include dark(#4686a0);
 		background-attachment:	fixed,							fixed,							fixed;
-		background-image:		url('images/overlay2.png'),		url('images/overlay4.svg'),		linear-gradient(45deg, _palette(accent6-alt), _palette(accent6) 68%, _palette(accent1) 90%);
+		background-image:		url('images/overlay2.png'),		url('images/overlay4.svg'),		linear-gradient(45deg, _palette(accent6-alt), _palette(accent6) 50%, _palette(accent1) 85%);
 		background-position:	top left,						center center,					center center;
 		background-size:		auto,							cover,							cover;
 		text-align: center;
