--- a/assets/sass/stock.scss
+++ b/assets/sass/stock.scss
@@ -10,7 +10,13 @@
 @import 'libs/reset';
 @import 'libs/basic';
 
+nav {
+  padding: 10px;
+}
+
 /* Container */
+
+
 
 	.container {
 		margin: 0 auto;
