--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,3 +1,33 @@
+// their light green:
+ // #32b8af
+ // #3cb
+ // lightseagreen
+ // hsl(175,57,45)
+ // rgb(50,184,175)
+
+// their golden:
+ // #faa322
+ // #fa2
+ // goldenrod
+ // hsl(35,95,55)
+ // rgb(250,163,34)
+
+// their purple:
+ // #
+ // #e48
+ // mediumvioletred
+ // hsl(336,69,54)
+ // rgb(220,60,123)
+
+// ##96cmediumpurplehsl(269,41,57)rgb(144,100,191)
+//
+// ##f73tomatohsl(19,85,55)rgb(239,107,45)
+//
+// ##18adarkcyanhsl(195,90,33)rgb(8,121,161)
+
+// #494949#555darkslategrayhsl(0,0,28)rgb(73,73,73)
+
+
 // Misc.
 	$misc: (
 		z-index-base:		10000
@@ -34,12 +64,12 @@
 		border-bg:			rgba(144,144,144,0.075),
 		border2:			rgba(144,144,144,0.75),
 		border2-bg:			rgba(144,144,144,0.2),
-		accent1:			#faa322,
-		accent2:			#8addaa,
-		accent3:			#6bd4c8,
-		accent4:			#57aed3,
-		accent5:			#4a87d3,
-		accent6:			#32b8af,
+		accent1:			#faa322, // golden
+		accent2:			#8addaa, // magenta
+		accent3:			#9064bf, // indigo
+		accent4:			#ef6b2d, // reddish
+		accent5:			#0879a1, // dark cyan
+		accent6:			#32b8af, // seagreen
 		accent1-alt:		desaturate(darken(#faa322, 15), 20),
 		accent2-alt:		desaturate(darken(#8addaa, 15), 20),
 		accent3-alt:		desaturate(darken(#6bd4c8, 15), 20),
