--- a/assets/sass/new.scss
+++ b/assets/sass/new.scss
@@ -5,12 +5,13 @@
 @import 'libs/breakpoints';
 @import 'libs/html-grid';
 @import url('font-awesome.min.css');
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
+// @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import 'libs/reset';
 @import 'libs/basic';
 
 /* Container */
+
 
 	.container {
 		margin: 0 auto;
