Not writing small enough commits. Repainted SVG & refactoring for proper styling.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 @import url("font-awesome.min.css");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 @import url("https://fonts.googleapis.com/css?family=Lato");
 /*
 	Photon by HTML5 UP
@@ -80,6 +79,7 @@ html {
 
 *, *:before, *:after {
   box-sizing: inherit;
+  max-width: 100%;
 }
 
 body {
@@ -234,8 +234,286 @@ pre code {
   text-align: right;
 }
 
+#header {
+  padding: 2em 0 2em 0;
+  background-color: #316c68;
+  color: rgba(255, 255, 255, 0.75);
+  background-attachment: fixed, fixed, fixed;
+  background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(225deg, #faa322, #f2b65d 22%, #59c4bd 44%, #32b8af 77%, #316c68);
+  background-position: top left, center center, center center;
+  background-size: auto, cover, cover;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
+#header a {
+  border-bottom-color: rgba(255, 255, 255, 0.5);
+}
+#header a:hover {
+  color: #ffffff;
+}
+#header h1, #header h2, #header h3, #header h4, #header h5, #header h6, #header strong, #header b {
+  color: #ffffff;
+}
+#header header p {
+  color: #ffffff;
+}
+#header header.major:after {
+  background: #ffffff;
+}
+#header input[type=submit],
+#header input[type=reset],
+#header input[type=button],
+#header button,
+#header .button {
+  box-shadow: inset 0 0 0 1px #ffffff;
+  color: #ffffff !important;
+}
+#header input[type=submit]:hover,
+#header input[type=reset]:hover,
+#header input[type=button]:hover,
+#header button:hover,
+#header .button:hover {
+  background-color: rgba(255, 255, 255, 0.125);
+}
+#header input[type=submit]:active,
+#header input[type=reset]:active,
+#header input[type=button]:active,
+#header button:active,
+#header .button:active {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+#header input[type=submit].primary,
+#header input[type=reset].primary,
+#header input[type=button].primary,
+#header button.primary,
+#header .button.primary {
+  background-color: #ffffff;
+  box-shadow: inset 0 0 0 1px #ffffff !important;
+  color: #316c68 !important;
+}
+#header input[type=submit].primary:hover,
+#header input[type=reset].primary:hover,
+#header input[type=button].primary:hover,
+#header button.primary:hover,
+#header .button.primary:hover {
+  background-color: rgba(255, 255, 255, 0.125) !important;
+  color: #ffffff !important;
+}
+#header input[type=submit].primary:active,
+#header input[type=reset].primary:active,
+#header input[type=button].primary:active,
+#header button.primary:active,
+#header .button.primary:active {
+  background-color: rgba(255, 255, 255, 0.25) !important;
+}
+#header ul.major-icons li .icon {
+  border-color: #ffffff;
+}
+#header .icon.major {
+  color: #ffffff;
+}
+#header h1 {
+  margin: 0;
+}
+#header p {
+  margin: 1em 0 0 0;
+}
+#header .actions {
+  -moz-justify-content: center;
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  margin-top: 2.5em;
+  margin-left: 0;
+  position: relative;
+}
+#header .actions li:first-child {
+  padding-left: 0;
+}
+#header .inner {
+  -moz-transition: -moz-transform 1.5s ease, opacity 2s ease;
+  -webkit-transition: -webkit-transform 1.5s ease, opacity 2s ease;
+  -ms-transition: -ms-transform 1.5s ease, opacity 2s ease;
+  transition: transform 1.5s ease, opacity 2s ease;
+  -moz-transition-delay: 0.25s;
+  -webkit-transition-delay: 0.25s;
+  -ms-transition-delay: 0.25s;
+  transition-delay: 0.25s;
+  -moz-transform: scale(1);
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+  z-index: 1;
+}
+#header .inner .actions {
+  -moz-transition: -moz-transform 1.25s ease;
+  -webkit-transition: -webkit-transform 1.25s ease;
+  -ms-transition: -ms-transform 1.25s ease;
+  transition: transform 1.25s ease;
+  -moz-transition-delay: 1s;
+  -webkit-transition-delay: 1s;
+  -ms-transition-delay: 1s;
+  transition-delay: 1s;
+  -moz-transform: translateY(0);
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+}
+#header:after {
+  -moz-transition: opacity 1s ease;
+  -webkit-transition: opacity 1s ease;
+  -ms-transition: opacity 1s ease;
+  transition: opacity 1s ease;
+  background-image: linear-gradient(45deg, #32b8af, #316c68);
+  content: "";
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+body.is-preload #header .inner {
+  -moz-transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
+  opacity: 0;
+}
+body.is-preload #header .inner .actions {
+  -moz-transform: translateY(30em);
+  -webkit-transform: translateY(30em);
+  -ms-transform: translateY(30em);
+  transform: translateY(30em);
+  opacity: 0;
+}
+body.is-preload #header:after {
+  opacity: 1;
+}
+
+/* Footer Gradient */
+#footer {
+  padding: 6em 0 6em 0;
+  background-color: #4686a0;
+  color: rgba(255, 255, 255, 0.75);
+  background-attachment: fixed, fixed, fixed;
+  background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #316c68, #32b8af 50%, #faa322 85%);
+  background-position: top left, center center, center center;
+  background-size: auto, cover, cover;
+  text-align: center;
+}
+#footer a {
+  border-bottom-color: rgba(255, 255, 255, 0.5);
+}
+#footer a:hover {
+  color: #ffffff;
+}
+#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6, #footer strong, #footer b {
+  color: #ffffff;
+}
+#footer header p {
+  color: #ffffff;
+}
+#footer header.major:after {
+  background: #ffffff;
+}
+#footer input[type=submit],
+#footer input[type=reset],
+#footer input[type=button],
+#footer button,
+#footer .button {
+  box-shadow: inset 0 0 0 1px #ffffff;
+  color: #ffffff !important;
+}
+#footer input[type=submit]:hover,
+#footer input[type=reset]:hover,
+#footer input[type=button]:hover,
+#footer button:hover,
+#footer .button:hover {
+  background-color: rgba(255, 255, 255, 0.125);
+}
+#footer input[type=submit]:active,
+#footer input[type=reset]:active,
+#footer input[type=button]:active,
+#footer button:active,
+#footer .button:active {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+#footer input[type=submit].primary,
+#footer input[type=reset].primary,
+#footer input[type=button].primary,
+#footer button.primary,
+#footer .button.primary {
+  background-color: #ffffff;
+  box-shadow: inset 0 0 0 1px #ffffff !important;
+  color: #4686a0 !important;
+}
+#footer input[type=submit].primary:hover,
+#footer input[type=reset].primary:hover,
+#footer input[type=button].primary:hover,
+#footer button.primary:hover,
+#footer .button.primary:hover {
+  background-color: rgba(255, 255, 255, 0.125) !important;
+  color: #ffffff !important;
+}
+#footer input[type=submit].primary:active,
+#footer input[type=reset].primary:active,
+#footer input[type=button].primary:active,
+#footer button.primary:active,
+#footer .button.primary:active {
+  background-color: rgba(255, 255, 255, 0.25) !important;
+}
+#footer ul.major-icons li .icon {
+  border-color: #ffffff;
+}
+#footer .icon.major {
+  color: #ffffff;
+}
+#footer .icons {
+  margin: 0;
+}
+#footer .copyright {
+  font-size: 0.8em;
+  list-style: none;
+  margin: 2em 0 0 0;
+  padding: 0;
+}
+#footer .copyright li {
+  border-left: solid 1px;
+  display: inline-block;
+  line-height: 1em;
+  margin-left: 1em;
+  padding: 0 0 0 1em;
+}
+#footer .copyright li:first-child {
+  border-left: 0;
+  margin-left: 0;
+  padding: 0;
+}
+
+header {
+  padding: 15px;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+}
+
 nav {
   padding: 10px;
+  text-align: right;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  max-width: 100%;
+}
+nav .icon.compassicon {
+  color: #faa322;
 }
 
 /* Container */
@@ -2337,496 +2615,5 @@ button:disabled,
 }
 
 /* Header Gradient */
-.palerbg {
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 5px;
-}
-
-#header {
-  padding: 9em 0 9em 0;
-  background-color: #4686a0;
-  color: rgba(255, 255, 255, 0.75);
-  background-attachment: fixed, fixed, fixed;
-  background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #faa322 8%, #32b8af 32%, #316c68);
-  background-position: top left, center center, center center;
-  background-size: auto, cover, cover;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-}
-#header a {
-  border-bottom-color: rgba(255, 255, 255, 0.5);
-}
-#header a:hover {
-  color: #ffffff;
-}
-#header h1, #header h2, #header h3, #header h4, #header h5, #header h6, #header strong, #header b {
-  color: #ffffff;
-}
-#header header p {
-  color: #ffffff;
-}
-#header header.major:after {
-  background: #ffffff;
-}
-#header input[type=submit],
-#header input[type=reset],
-#header input[type=button],
-#header button,
-#header .button {
-  box-shadow: inset 0 0 0 1px #ffffff;
-  color: #ffffff !important;
-}
-#header input[type=submit]:hover,
-#header input[type=reset]:hover,
-#header input[type=button]:hover,
-#header button:hover,
-#header .button:hover {
-  background-color: rgba(255, 255, 255, 0.125);
-}
-#header input[type=submit]:active,
-#header input[type=reset]:active,
-#header input[type=button]:active,
-#header button:active,
-#header .button:active {
-  background-color: rgba(255, 255, 255, 0.25);
-}
-#header input[type=submit].primary,
-#header input[type=reset].primary,
-#header input[type=button].primary,
-#header button.primary,
-#header .button.primary {
-  background-color: #ffffff;
-  box-shadow: inset 0 0 0 1px #ffffff !important;
-  color: #4686a0 !important;
-}
-#header input[type=submit].primary:hover,
-#header input[type=reset].primary:hover,
-#header input[type=button].primary:hover,
-#header button.primary:hover,
-#header .button.primary:hover {
-  background-color: rgba(255, 255, 255, 0.125) !important;
-  color: #ffffff !important;
-}
-#header input[type=submit].primary:active,
-#header input[type=reset].primary:active,
-#header input[type=button].primary:active,
-#header button.primary:active,
-#header .button.primary:active {
-  background-color: rgba(255, 255, 255, 0.25) !important;
-}
-#header ul.major-icons li .icon {
-  border-color: #ffffff;
-}
-#header .icon.major {
-  color: #ffffff;
-}
-#header h1 {
-  margin: 0;
-}
-#header p {
-  margin: 1em 0 0 0;
-}
-#header .actions {
-  -moz-justify-content: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  margin-top: 2.5em;
-  margin-left: 0;
-  position: relative;
-}
-#header .actions li:first-child {
-  padding-left: 0;
-}
-#header .inner {
-  -moz-transition: -moz-transform 1.5s ease, opacity 2s ease;
-  -webkit-transition: -webkit-transform 1.5s ease, opacity 2s ease;
-  -ms-transition: -ms-transform 1.5s ease, opacity 2s ease;
-  transition: transform 1.5s ease, opacity 2s ease;
-  -moz-transition-delay: 0.25s;
-  -webkit-transition-delay: 0.25s;
-  -ms-transition-delay: 0.25s;
-  transition-delay: 0.25s;
-  -moz-transform: scale(1);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
-  opacity: 1;
-  position: relative;
-  z-index: 1;
-}
-#header .inner .actions {
-  -moz-transition: -moz-transform 1.25s ease;
-  -webkit-transition: -webkit-transform 1.25s ease;
-  -ms-transition: -ms-transform 1.25s ease;
-  transition: transform 1.25s ease;
-  -moz-transition-delay: 1s;
-  -webkit-transition-delay: 1s;
-  -ms-transition-delay: 1s;
-  transition-delay: 1s;
-  -moz-transform: translateY(0);
-  -webkit-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(0);
-  opacity: 1;
-}
-#header:after {
-  -moz-transition: opacity 1s ease;
-  -webkit-transition: opacity 1s ease;
-  -ms-transition: opacity 1s ease;
-  transition: opacity 1s ease;
-  background-image: linear-gradient(45deg, #32b8af, #316c68);
-  content: "";
-  height: 100%;
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-
-body.is-preload #header .inner {
-  -moz-transform: scale(1.05);
-  -webkit-transform: scale(1.05);
-  -ms-transform: scale(1.05);
-  transform: scale(1.05);
-  opacity: 0;
-}
-body.is-preload #header .inner .actions {
-  -moz-transform: translateY(30em);
-  -webkit-transform: translateY(30em);
-  -ms-transform: translateY(30em);
-  transform: translateY(30em);
-  opacity: 0;
-}
-body.is-preload #header:after {
-  opacity: 1;
-}
-
-/* Footer Gradient */
-#footer {
-  padding: 6em 0 6em 0;
-  background-color: #4686a0;
-  color: rgba(255, 255, 255, 0.75);
-  background-attachment: fixed, fixed, fixed;
-  background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #316c68, #32b8af 50%, #faa322 85%);
-  background-position: top left, center center, center center;
-  background-size: auto, cover, cover;
-  text-align: center;
-}
-#footer a {
-  border-bottom-color: rgba(255, 255, 255, 0.5);
-}
-#footer a:hover {
-  color: #ffffff;
-}
-#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6, #footer strong, #footer b {
-  color: #ffffff;
-}
-#footer header p {
-  color: #ffffff;
-}
-#footer header.major:after {
-  background: #ffffff;
-}
-#footer input[type=submit],
-#footer input[type=reset],
-#footer input[type=button],
-#footer button,
-#footer .button {
-  box-shadow: inset 0 0 0 1px #ffffff;
-  color: #ffffff !important;
-}
-#footer input[type=submit]:hover,
-#footer input[type=reset]:hover,
-#footer input[type=button]:hover,
-#footer button:hover,
-#footer .button:hover {
-  background-color: rgba(255, 255, 255, 0.125);
-}
-#footer input[type=submit]:active,
-#footer input[type=reset]:active,
-#footer input[type=button]:active,
-#footer button:active,
-#footer .button:active {
-  background-color: rgba(255, 255, 255, 0.25);
-}
-#footer input[type=submit].primary,
-#footer input[type=reset].primary,
-#footer input[type=button].primary,
-#footer button.primary,
-#footer .button.primary {
-  background-color: #ffffff;
-  box-shadow: inset 0 0 0 1px #ffffff !important;
-  color: #4686a0 !important;
-}
-#footer input[type=submit].primary:hover,
-#footer input[type=reset].primary:hover,
-#footer input[type=button].primary:hover,
-#footer button.primary:hover,
-#footer .button.primary:hover {
-  background-color: rgba(255, 255, 255, 0.125) !important;
-  color: #ffffff !important;
-}
-#footer input[type=submit].primary:active,
-#footer input[type=reset].primary:active,
-#footer input[type=button].primary:active,
-#footer button.primary:active,
-#footer .button.primary:active {
-  background-color: rgba(255, 255, 255, 0.25) !important;
-}
-#footer ul.major-icons li .icon {
-  border-color: #ffffff;
-}
-#footer .icon.major {
-  color: #ffffff;
-}
-#footer .icons {
-  margin: 0;
-}
-#footer .copyright {
-  font-size: 0.8em;
-  list-style: none;
-  margin: 2em 0 0 0;
-  padding: 0;
-}
-#footer .copyright li {
-  border-left: solid 1px;
-  display: inline-block;
-  line-height: 1em;
-  margin-left: 1em;
-  padding: 0 0 0 1em;
-}
-#footer .copyright li:first-child {
-  border-left: 0;
-  margin-left: 0;
-  padding: 0;
-}
-
-/* XLarge */
-@media screen and (max-width: 1680px) {
-  /* Basic */
-  body, input, select, textarea {
-    font-size: 14pt;
-  }
-
-  /* Header */
-  #header {
-    padding: 6em 0 6em 0;
-  }
-}
-/* Large */
-@media screen and (max-width: 1140px) {
-  /* Basic */
-  body, input, select, textarea {
-    font-size: 13pt;
-  }
-
-  h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
-    display: none;
-  }
-
-  /* List */
-  ul.major-icons li {
-    padding: 2em;
-  }
-  ul.major-icons li .icon {
-    height: 8em;
-    line-height: 8em;
-    width: 8em;
-  }
-
-  /* Main */
-  .main {
-    padding: 4em 0 2em 0;
-  }
-  .main.style2 {
-    background-attachment: scroll;
-  }
-
-  /* Header */
-  #header {
-    padding: 5em 0 5em 0;
-    background-attachment: scroll;
-  }
-  #header br {
-    display: inline;
-  }
-
-  /* Footer */
-  #footer {
-    padding: 4em 0 4em 0;
-    background-attachment: scroll;
-  }
-}
-/* Medium */
-@media screen and (max-width: 980px) {
-  /* List */
-  ul.major-icons li {
-    padding: 2em;
-  }
-  ul.major-icons li .icon {
-    height: 7em;
-    line-height: 7em;
-    width: 7em;
-  }
-
-  /* Main */
-  .main {
-    padding: 5em 3em 3em 3em;
-  }
-
-  /* Header */
-  #header {
-    padding: 8em 3em 8em 3em;
-  }
-
-  /* Footer */
-  #footer {
-    padding: 5em 3em 5em 3em;
-  }
-
-  /* One */
-  #one {
-    text-align: center;
-  }
-
-  /* Two */
-  #two {
-    text-align: center;
-  }
-}
-/* Small */
-@media screen and (max-width: 736px) {
-  /* Basic */
-  body, input, select, textarea {
-    font-size: 12pt;
-  }
-
-  h1 {
-    font-size: 1.75em;
-  }
-
-  h2 {
-    font-size: 1.5em;
-  }
-
-  h3 {
-    font-size: 1.1em;
-  }
-
-  h4 {
-    font-size: 1em;
-  }
-
-  /* List */
-  ul.major-icons li {
-    padding: 1.5em;
-  }
-  ul.major-icons li .icon {
-    height: 5em;
-    line-height: 5em;
-    width: 5em;
-  }
-  ul.major-icons li .icon:before {
-    font-size: 42px;
-  }
-
-  /* Icon */
-  .icon.major {
-    margin: 0 0 1em 0;
-  }
-
-  /* Button */
-  input[type=submit],
-input[type=reset],
-input[type=button],
-button,
-.button {
-    height: 3em;
-    line-height: 3em;
-  }
-
-  /* Main */
-  .main {
-    padding: 3em 1.5em 1em 1.5em;
-  }
-
-  /* Header */
-  #header {
-    padding: 4em 3em 4em 3em;
-  }
-  #header .actions {
-    margin: 2em 0 0 0;
-  }
-
-  /* Footer */
-  #footer {
-    padding: 3em 1.5em 3em 1.5em;
-  }
-}
-/* XSmall */
-@media screen and (max-width: 480px) {
-  /* Button */
-  input[type=submit],
-input[type=reset],
-input[type=button],
-.button {
-    padding: 0;
-  }
-
-  /* Main */
-  .main {
-    padding: 2em 1.5em 0.1em 1.5em;
-  }
-
-  /* Header */
-  #header {
-    padding: 4em 2em 4em 2em;
-  }
-  #header br {
-    display: none;
-  }
-
-  /* Footer */
-  #footer {
-    padding: 2em 1.5em 2em 1.5em;
-  }
-  #footer .copyright {
-    margin: 1.5em 0 0 0;
-  }
-  #footer .copyright li {
-    border: 0;
-    display: block;
-    margin: 1em 0 0 0;
-    padding: 0;
-  }
-  #footer .copyright li:first-child {
-    margin-top: 0;
-  }
-}
-/* XXSmall */
-@media screen and (max-width: 320px) {
-  /* Basic */
-  html, body {
-    min-width: 320px;
-  }
-
-  /* Main */
-  .main {
-    padding: 2em 1em 0.1em 1em;
-  }
-
-  /* Header */
-  #header {
-    padding: 3em 1em 3em 1em;
-  }
-
-  /* Footer */
-  #footer {
-    padding: 2em 1em 2em 1em;
-  }
-}
 
 /*# sourceMappingURL=main.css.map */
