--- a/assets/sass/libs/_mixins.scss
+++ b/assets/sass/libs/_mixins.scss
@@ -61,3 +61,83 @@
 	@return url("data:image/svg+xml;charset=utf8,#{$svg}");
 
 }
+
+
+// Dark (mixin)
+
+@mixin dark($color-this-bg: _palette(dark, bg)) {
+	background-color: $color-this-bg;
+	color: _palette(dark, fg);
+
+	a {
+		border-bottom-color: transparentize(_palette(dark, fg), 0.25);
+
+		&:hover {
+			color: _palette(dark, fg-bold);
+		}
+	}
+
+	h1, h2, h3, h4, h5, h6, strong, b {
+		color: _palette(dark, fg-bold);
+	}
+
+	header {
+		p {
+			color: _palette(dark, fg-bold);
+		}
+
+		&.major {
+			&:after {
+				background: _palette(dark, border);
+			}
+		}
+	}
+
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"],
+	button,
+	.button {
+		box-shadow: inset 0 0 0 1px _palette(dark, border);
+		color: _palette(dark, fg-bold) !important;
+
+		&:hover {
+			background-color: _palette(dark, border-bg);
+		}
+
+		&:active {
+			background-color: _palette(dark, border2-bg);
+		}
+
+		&.primary {
+			background-color: _palette(dark, fg-bold);
+			box-shadow: inset 0 0 0 1px _palette(dark, border) !important;
+			color: $color-this-bg !important;
+
+			&:hover {
+				background-color: _palette(dark, border-bg) !important;
+				color: _palette(dark, fg-bold) !important;
+			}
+
+			&:active {
+				background-color: _palette(dark, border2-bg) !important;
+			}
+		}
+	}
+
+	ul {
+		&.major-icons {
+			li {
+				.icon {
+					border-color: _palette(dark, border);
+				}
+			}
+		}
+	}
+
+	.icon {
+		&.major {
+			color: _palette(dark, fg-bold);
+		}
+	}
+}
