--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -239,7 +239,7 @@ pre code {
   background-color: #316c68;
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed, fixed, fixed;
-  background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(225deg, #faa322, #f2b65d 22%, #59c4bd 44%, #32b8af 77%, #316c68);
+  background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(225deg, #faa322, #32b8af 44%, #316c68);
   background-position: top left, center center, center center;
   background-size: auto, cover, cover;
   overflow: hidden;
@@ -288,17 +288,17 @@ pre code {
 #header input[type=button].primary,
 #header button.primary,
 #header .button.primary {
-  background-color: #ffffff;
-  box-shadow: inset 0 0 0 1px #ffffff !important;
-  color: #316c68 !important;
+  box-shadow: inset 0 0 0 1px #faa322 !important;
+  color: #ffffff;
 }
 #header input[type=submit].primary:hover,
 #header input[type=reset].primary:hover,
 #header input[type=button].primary:hover,
 #header button.primary:hover,
 #header .button.primary:hover {
-  background-color: rgba(255, 255, 255, 0.125) !important;
-  color: #ffffff !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  color: #ffa41d !important;
+  font-weight: 600;
 }
 #header input[type=submit].primary:active,
 #header input[type=reset].primary:active,
@@ -332,42 +332,14 @@ pre code {
   padding-left: 0;
 }
 #header .inner {
-  -moz-transition: -moz-transform 1.5s ease, opacity 2s ease;
-  -webkit-transition: -webkit-transform 1.5s ease, opacity 2s ease;
-  -ms-transition: -ms-transform 1.5s ease, opacity 2s ease;
-  transition: transform 1.5s ease, opacity 2s ease;
-  -moz-transition-delay: 0.25s;
-  -webkit-transition-delay: 0.25s;
-  -ms-transition-delay: 0.25s;
-  transition-delay: 0.25s;
-  -moz-transform: scale(1);
-  -webkit-transform: scale(1);
-  -ms-transform: scale(1);
-  transform: scale(1);
   opacity: 1;
   position: relative;
   z-index: 1;
 }
 #header .inner .actions {
-  -moz-transition: -moz-transform 1.25s ease;
-  -webkit-transition: -webkit-transform 1.25s ease;
-  -ms-transition: -ms-transform 1.25s ease;
-  transition: transform 1.25s ease;
-  -moz-transition-delay: 1s;
-  -webkit-transition-delay: 1s;
-  -ms-transition-delay: 1s;
-  transition-delay: 1s;
-  -moz-transform: translateY(0);
-  -webkit-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(0);
   opacity: 1;
 }
 #header:after {
-  -moz-transition: opacity 1s ease;
-  -webkit-transition: opacity 1s ease;
-  -ms-transition: opacity 1s ease;
-  transition: opacity 1s ease;
   background-image: linear-gradient(45deg, #32b8af, #316c68);
   content: "";
   height: 100%;
@@ -376,24 +348,6 @@ pre code {
   position: absolute;
   top: 0;
   width: 100%;
-}
-
-body.is-preload #header .inner {
-  -moz-transform: scale(1.05);
-  -webkit-transform: scale(1.05);
-  -ms-transform: scale(1.05);
-  transform: scale(1.05);
-  opacity: 0;
-}
-body.is-preload #header .inner .actions {
-  -moz-transform: translateY(30em);
-  -webkit-transform: translateY(30em);
-  -ms-transform: translateY(30em);
-  transform: translateY(30em);
-  opacity: 0;
-}
-body.is-preload #header:after {
-  opacity: 1;
 }
 
 /* Footer Gradient */
@@ -449,17 +403,17 @@ body.is-preload #header:after {
 #footer input[type=button].primary,
 #footer button.primary,
 #footer .button.primary {
-  background-color: #ffffff;
-  box-shadow: inset 0 0 0 1px #ffffff !important;
-  color: #4686a0 !important;
+  box-shadow: inset 0 0 0 1px #faa322 !important;
+  color: #ffffff;
 }
 #footer input[type=submit].primary:hover,
 #footer input[type=reset].primary:hover,
 #footer input[type=button].primary:hover,
 #footer button.primary:hover,
 #footer .button.primary:hover {
-  background-color: rgba(255, 255, 255, 0.125) !important;
-  color: #ffffff !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  color: #ffa41d !important;
+  font-weight: 600;
 }
 #footer input[type=submit].primary:active,
 #footer input[type=reset].primary:active,
@@ -505,7 +459,7 @@ header {
 }
 
 nav {
-  padding: 10px;
+  padding: 20px;
   text-align: right;
   position: fixed;
   top: 0;
@@ -2432,7 +2386,7 @@ button,
   border-radius: 4px;
   border: 0;
   box-shadow: inset 0 0 0 1px rgba(144, 144, 144, 0.5);
-  color: #555 !important;
+  color: #faa322 !important;
   cursor: pointer;
   display: inline-block;
   font-size: 0.9em;
@@ -2501,7 +2455,7 @@ input[type=reset].primary,
 input[type=button].primary,
 button.primary,
 .button.primary {
-  background-color: #555;
+  background-color: #faa322;
   box-shadow: none !important;
   color: #fff !important;
 }
@@ -2588,17 +2542,17 @@ button:disabled,
 .main.style2 input[type=button].primary,
 .main.style2 button.primary,
 .main.style2 .button.primary {
-  background-color: #ffffff;
-  box-shadow: inset 0 0 0 1px #ffffff !important;
-  color: #333 !important;
+  box-shadow: inset 0 0 0 1px #faa322 !important;
+  color: #ffffff;
 }
 .main.style2 input[type=submit].primary:hover,
 .main.style2 input[type=reset].primary:hover,
 .main.style2 input[type=button].primary:hover,
 .main.style2 button.primary:hover,
 .main.style2 .button.primary:hover {
-  background-color: rgba(255, 255, 255, 0.125) !important;
-  color: #ffffff !important;
+  background-color: rgba(255, 255, 255, 0.5) !important;
+  color: #ffa41d !important;
+  font-weight: 600;
 }
 .main.style2 input[type=submit].primary:active,
 .main.style2 input[type=reset].primary:active,
@@ -2612,6 +2566,25 @@ button:disabled,
 }
 .main.style2 .icon.major {
   color: #ffffff;
+}
+
+html, body {
+  min-width: 320px;
+}
+
+/* Main */
+.main {
+  padding: 2em 1em 0.1em 1em;
+}
+
+/* Header */
+#header {
+  padding: 3em 1em 3em 1em;
+}
+
+/* Footer */
+#footer {
+  padding: 2em 1em 2em 1em;
 }
 
 /* Header Gradient */
