--- a/assets/sass/libs/_mixins.scss
+++ b/assets/sass/libs/_mixins.scss
@@ -110,13 +110,15 @@
 		}
 
 		&.primary {
-			background-color: _palette(dark, fg-bold);
-			box-shadow: inset 0 0 0 1px _palette(dark, border) !important;
-			color: $color-this-bg !important;
+			background-color: _palette(dark, accent1);
+			box-shadow: inset 0 0 0 1px _palette(accent1) !important;
+			color: #ffffff;
+      // font-weight: bolder;
 
 			&:hover {
-				background-color: _palette(dark, border-bg) !important;
-				color: _palette(dark, fg-bold) !important;
+				background-color: _palette(dark, fg-light) !important;
+				color: saturate(_palette(accent1), 40) !important;
+        font-weight: 600;
 			}
 
 			&:active {
