--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -78,6 +78,7 @@
 		accent6-alt:		desaturate(darken(#32b8af, 15), 20),
     accent1-pale:   desaturate(lighten(#faa322, 10), 10),
     accent6-pale:   desaturate(lighten(#32b8af, 10), 10),
+    accent1-brighten: saturate(lighten(#faa322, 15), 20),
 
 		dark: (
 			bg:				#666666,
